frontends/leptos/tests/snapshots/snapshots__snap_markdown_body_code_block_no_lang.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="md-body" class="block-body md-body"><pre><code>plain code
</code></pre>
</div>
