frontends/leptos/tests/snapshots/snapshots__snap_markdown_body_inline_code.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="md-body" class="block-body md-body"><p>call <code>foo()</code> and <code>bar</code></p>
</div>
