frontends/leptos/tests/snapshots/snapshots__snap_markdown_body_link.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="md-body" class="block-body md-body"><p>see <a href="https://example.com">omega</a></p>
</div>
