frontends/leptos/tests/snapshots/snapshots__snap_markdown_body_paragraph.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="md-body" class="block-body md-body"><p>hello</p>
</div>
