frontends/leptos/tests/snapshots/snapshots__snap_modal_open_loading.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="leptos-context-modal-backdrop" class="leptos-context-modal-backdrop"><div data-testid="leptos-context-modal" class="leptos-context-modal"><header class="leptos-context-modal-header"><span class="leptos-context-modal-title">context records</span><button data-testid="leptos-context-modal-close" class="leptos-context-modal-close">✕</button></header><div data-testid="leptos-context-modal-meta" class="leptos-context-modal-meta">2 hash(es) · 1234 bytes</div><!><!--<() />--><!><!--<() />--><ul data-testid="leptos-context-modal-records" class="leptos-context-modal-records"><!></ul><div data-testid="leptos-context-modal-empty" class="leptos-context-modal-empty">(no context records returned)</div></div></div>
